// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlledSearchableDropdown component should display default value 1`] = `
<ForwardRef(SearchableDropdownControlledInner)
  defaultLabel="Forth"
  icon="searchSystem"
  isClearVisible={true}
  isResultsListVisible={false}
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClear={[Function]}
  onFocus={[Function]}
  onResultClick={[Function]}
  resultsList={
    Array [
      Object {
        "label": "Forth",
        "result": Object {
          "id": "4",
          "name": "Forth",
        },
      },
    ]
  }
  selectedValue="4"
  value=""
/>
`;

exports[`ControlledSearchableDropdown component should match a snapshot 1`] = `
<ElSearchableDropdownContainer>
  <input
    readOnly={true}
    style={
      Object {
        "display": "none",
      }
    }
    value=""
  />
  <ElSearchableDropdownSearchInputAddOn>
    <Icon
      icon="searchSystem"
    />
  </ElSearchableDropdownSearchInputAddOn>
  <ElSearchableDropdownSearchInput
    onChange={[Function]}
  />
</ElSearchableDropdownContainer>
`;

exports[`SearchableDropdown component should match a snapshot 1`] = `
<ForwardRef(SearchableDropdownControlledInner)
  defaultLabel=""
  icon="searchSystem"
  isClearVisible={false}
  isResultsListVisible={false}
  loading={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClear={[Function]}
  onFocus={[Function]}
  onResultClick={[Function]}
  resultsList={Array []}
  selectedValue=""
  value=""
/>
`;

exports[`SearchableDropdownSearchLabel component should match a snapshot 1`] = `
<ElSearchableDropdownSearchLabel>
  I am a label
</ElSearchableDropdownSearchLabel>
`;
